Fixes overflowing menu for our dear friend IE

--- a/app/styles/components/freestyle-usage-controls.scss
+++ b/app/styles/components/freestyle-usage-controls.scss
@@ -29,6 +29,7 @@ $FreestyleUsageControls-boxShadow: 0 2px 5px 0 $FreestyleUsageControls-shadow1, 
   &-itemControl {
     cursor: pointer;
     padding-right: .1rem;
+    width: 100%;
   }
 
   &-itemLabel {
